# codecov_test

./: .travis.yml  CMakeLists.txt  README.md  codecov.yml
include/: foo.hpp
test/: CMakeLists.txt  add.cpp  mul.cpp
